[project]
name = "benewake_tf03"
version = "0.1.0"
description = "Read distance from a Benewake TF03-100 RS485 LiDAR over Modbus-RTU and expose it as a tag and on the UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.5.0",
    "transitions>=0.9.2",
]

[project.scripts]
doover-app-run = "benewake_tf03:main"
export-config = "benewake_tf03.app_config:export"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pymodbus>=3.9.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
